--- a/app/routes/_portal/sections/header/styles.module.scss
+++ b/app/routes/_portal/sections/header/styles.module.scss
@@ -1,20 +1,63 @@
-@import 'consts/variables.scss';
-
-$header-pad-tb: 8px;
-$header-pad-lr: 16px;
-
-.header {
-    position: fixed;
-    top: 0px;
-    left: 0px;
-    width: 100%;
-    height: $header-size;
-
-    padding: $header-pad-tb $header-pad-lr;
-
-    background-color: var(--mantine-color-body);
-}
+@import './styles/consts/variables.scss';
 
 .logo {
-    height: calc($header-size - $header-pad-tb * 2);
+    height: calc(mrem(60px) - 8px);
+}
+
+.header {
+    height: mrem(60px);
+    padding-left: var(--mantine-spacing-md);
+    padding-right: var(--mantine-spacing-md);
+    border-bottom: mrem(1px) solid
+        light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
+}
+
+.link {
+    display: flex;
+    align-items: center;
+    height: 100%;
+    padding-left: var(--mantine-spacing-md);
+    padding-right: var(--mantine-spacing-md);
+    text-decoration: none;
+    color: light-dark(var(--mantine-color-black), var(--mantine-color-white));
+    font-weight: 500;
+    font-size: var(--mantine-font-size-sm);
+
+    @media (max-width: $mantine-breakpoint-sm) {
+        height: mrem(42px);
+        width: 100%;
+    }
+
+    @mixin hover {
+        background-color: light-dark(
+            var(--mantine-color-gray-0),
+            var(--mantine-color-dark-6)
+        );
+    }
+}
+
+.subLink {
+    width: 100%;
+    padding: var(--mantine-spacing-xs) var(--mantine-spacing-md);
+    border-radius: var(--mantine-radius-md);
+
+    @mixin hover {
+        background-color: light-dark(
+            var(--mantine-color-gray-0),
+            var(--mantine-color-dark-7)
+        );
+    }
+}
+
+.dropdownFooter {
+    background-color: light-dark(
+        var(--mantine-color-gray-0),
+        var(--mantine-color-dark-7)
+    );
+    margin: calc(var(--mantine-spacing-md) * -1);
+    margin-top: var(--mantine-spacing-sm);
+    padding: var(--mantine-spacing-md) calc(var(--mantine-spacing-md) * 2);
+    padding-bottom: var(--mantine-spacing-xl);
+    border-top: mrem(1px) solid
+        light-dark(var(--mantine-color-gray-1), var(--mantine-color-dark-5));
 }
