--- a/app/routes/_portal/sections/footer/styles.module.scss
+++ b/app/routes/_portal/sections/footer/styles.module.scss
@@ -1,16 +1,96 @@
-@import './styles/consts/variables.scss';
-
 .footer {
+    margin-top: mrem(120px);
+    padding-top: calc(var(--mantine-spacing-xl) * 2);
+    padding-bottom: calc(var(--mantine-spacing-xl) * 2);
+    background-color: light-dark(
+        var(--mantine-color-gray-0),
+        var(--mantine-color-dark-6)
+    );
+    border-top: mrem(1px) solid
+        light-dark(var(--mantine-color-gray-2), var(--mantine-color-dark-5));
+}
+
+.logo {
+    max-width: mrem(200px);
+
+    @media (max-width: $mantine-breakpoint-sm) {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
+.description {
+    margin-top: mrem(5px);
+
+    @media (max-width: $mantine-breakpoint-sm) {
+        margin-top: var(--mantine-spacing-xs);
+        text-align: center;
+    }
+}
+
+.inner {
     display: flex;
-    flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
 
-    position: relative;
-    width: 100%;
-    min-height: $footer-size;
+    @media (max-width: $mantine-breakpoint-sm) {
+        flex-direction: column;
+        align-items: center;
+    }
+}
 
-    padding-left: 12px;
-    padding-right: 12px;
+.groups {
+    display: flex;
+    flex-wrap: wrap;
 
-    background-color: var(--mantine-color-body);
+    @media (max-width: $mantine-breakpoint-sm) {
+        display: none;
+    }
+}
+
+.wrapper {
+    width: mrem(160px);
+}
+
+.link {
+    display: block;
+    color: light-dark(var(--mantine-color-gray-6), var(--mantine-color-dark-1));
+    font-size: var(--mantine-font-size-sm);
+    padding-top: mrem(3px);
+    padding-bottom: mrem(3px);
+
+    &:hover {
+        text-decoration: underline;
+    }
+}
+
+.title {
+    font-size: var(--mantine-font-size-lg);
+    font-weight: 700;
+    font-family:
+        Greycliff CF,
+        var(--mantine-font-family);
+    margin-bottom: calc(var(--mantine-spacing-xs) / 2);
+    color: light-dark(var(--mantine-color-black), var(--mantine-color-white));
+}
+
+.afterFooter {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: var(--mantine-spacing-xl);
+    padding-top: var(--mantine-spacing-xl);
+    padding-bottom: var(--mantine-spacing-xl);
+    border-top: mrem(1px) solid
+        light-dark(var(--mantine-color-gray-2), var(--mantine-color-dark-4));
+
+    @media (max-width: $mantine-breakpoint-sm) {
+        flex-direction: column;
+    }
+}
+
+.social {
+    @media (max-width: $mantine-breakpoint-sm) {
+        margin-top: var(--mantine-spacing-xs);
+    }
 }
