removed unused packages improved theme button

--- a/app/routes/_portal/sections/header/styles.module.scss
+++ b/app/routes/_portal/sections/header/styles.module.scss
@@ -57,7 +57,7 @@
         width: 100%;
     }
 
-    @mixin hover {
+    @include hover {
         background-color: light-dark(
             var(--mantine-color-gray-0),
             var(--mantine-color-dark-6)
@@ -70,7 +70,7 @@
     padding: var(--mantine-spacing-xs) var(--mantine-spacing-md);
     border-radius: var(--mantine-radius-md);
 
-    @mixin hover {
+    @include hover {
         background-color: light-dark(
             var(--mantine-color-gray-0),
             var(--mantine-color-dark-7)
