improved light/dark theme support removed useless code [WIP] administrative dashboard update service added change account redirect support added register account redirect support

--- a/styles/_mantine.scss
+++ b/styles/_mantine.scss
@@ -62,3 +62,11 @@ $mantine-breakpoint-xl: '88em';
         @content;
     }
 }
+
+:export {
+    mantine-breakpoint-xs: '36em';
+    mantine-breakpoint-sm: '48em';
+    mantine-breakpoint-md: '62em';
+    mantine-breakpoint-lg: '75em';
+    mantine-breakpoint-xl: '88em';
+}
